@@ -5,6 +5,7 @@ Version 0.8.10  unreleased
    * Support custom formatters for Cucumber output.
    * Add configuration for memory and permgen space.
    * Add support for "analysis" like code metrics and coverage.
+   * Support headless mode on Linux for the devmode server and Cucumber tests.
 
 Version 0.8.9   11 Dec 2013
 
